fix: keep one bad service row from failing the whole export